[package]
name = "my_cont_srv"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix = "0.13.5"
actix-http = "3.11.2"
actix-server = "2.6.0"
actix-web = { version = "4.12.1", features = ["rustls-0_23", "compress-zstd"] }
actix-web-httpauth = "0.8.2"
anyhow = "1.0.100"
base64 = "0.22.1"
bcrypt = "0.17.1"
clap = { version = "4.5.32", features = ["derive"] }
epub = "2.1.5"
lru = "0.16.2"
mime_guess = "2.0.5"
regex = "1.12.2"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.10"
urlencoding = "2.1.3"

[dev-dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["default-tls"] }
